[package]
name = "serde-redis"
version = "0.7.3"
authors = ["Joe Wilm <joe@jwilm.com>"]
description = "Serde deserialization for redis-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/OneSignal/serde-redis"
documentation = "https://OneSignal.github.io/serde-redis/serde_redis/"

[dependencies]
redis = "0.14"
serde = "1.0"

[dev-dependencies]
serde_derive = "1.0"
serde_bytes = "0.10"
