[package]
name = "serde-redis"
version = "0.12.1"
authors = ["Joe Wilm <joe@jwilm.com>"]
description = "Serde deserialization for redis-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/OneSignal/serde-redis"
documentation = "https://docs.rs/serde-redis"
edition = "2018"

[dependencies]
redis = "0.21"
serde = "1.0"

[dev-dependencies]
serde_derive = "1.0"
serde_bytes = "0.10"
